--- a/influencer/templates/influencer/await_verification.html
+++ b/influencer/templates/influencer/await_verification.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head></head>
-    <body>
-        <h1>You have to await verification from endorsity.</h1>
-        <a href="/settings">Settings</a>
-    </body>
-</html>
+{% extends 'influencer/base.html' %}
+{% block main %}
+<h1>You have to await verification from endorsity.</h1>
+<a href="/settings">Settings</a>
+{% endblock %}
