--- a/influencer/templates/influencer/facebook_failed.html
+++ b/influencer/templates/influencer/facebook_failed.html
@@ -1,5 +1,4 @@
 {% extends 'influencer/base.html' %}
 {% block main %}
-<h1>Brands</h1>
-<a href="{% url 'accounts:settings' %}">Settings</a>
+<h1>Failed Connection.</h1>
 {% endblock %}
