--- a/influencer/templates/influencer/facebook_connect.html
+++ b/influencer/templates/influencer/facebook_connect.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head></head>
-    <body>
-        You need to add your facebook page to your instagram creator account and connect to facebook.
-        <a href="/influencer/connect/facebook/">Facebook Connect</a>
-        <a href="/settings">Settings</a>
-    </body>
-</html>
+{% extends 'influencer/base.html' %}
+{% block main %}
+You need to add your facebook page to your instagram creator account and connect to facebook.
+<a href="/influencer/connect/facebook/">Facebook Connect</a>
+<a href="/settings">Settings</a>
+{% endblock %}
