--- a/accounts/templates/accounts/password_reset_complete.html
+++ b/accounts/templates/accounts/password_reset_complete.html
@@ -1,9 +1,51 @@
 {% extends 'noauth/base.html' %}
 {% block main %}
-            Your password has been set. You may go ahead and log in now.
-            <br /><br />
-            <a href="{% url 'accounts:login' %}">
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-                  Log In
-                </button>
+<div class="container">
+    <div class="i-container"><i class="material-icons">done</i></div>
+    Your password has been set. You may go ahead and log in now.
+    <br /><br />
+    <div class="button-container">
+        <a href="{% url 'accounts:login' %}">
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                Log In
+            </button>
+        </a>
+    </div>
+</div>
+<style>
+    .container {
+        background-color: #EEEEEE;
+        width: 40vw;
+        margin-left: 30vw;
+        margin-top: 10vh;
+        border-radius: 5px;
+        font-size: 1.5em;
+        padding: 2vh 2vw;
+        text-align: center;
+    }
+
+    .container .mdl-button {
+        background-color: #161A1D !important;
+        color: #EEEEEE !important;
+        font-family: 'Rubik', sans-serif !important;
+        padding-top: 1px !important;
+        text-align: center;
+        margin: auto;
+    }
+
+    .button-container {
+        text-align: center;
+        margin-top: 1vh;
+    }
+
+    .i-container {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 2vh;
+    }
+
+    .i-container i {
+        font-size: 4em;
+    }
+</style>
 {% endblock %}
