--- a/accounts/templates/accounts/password_reset_confirm.html
+++ b/accounts/templates/accounts/password_reset_confirm.html
@@ -1,38 +1,79 @@
 {% extends 'noauth/base.html' %}
 {% block main %}
 {% if validlink %}
-
-<h3 class="main-heading">Please enter your new password twice so<br />we can verify you typed it in correctly.</h3>
-<div class="reset-pass-card-wide mdl-card mdl-shadow--2dp">
-    <form method="post" class="reset-pass-form">
-        {% csrf_token %}
-        <fieldset class="module aligned">
-            <div class="form-row field-password1">
-                {{ form.new_password1.errors }}
-                <label for="id_new_password1">New password:</label>
-                {{ form.new_password1 }}
-            </div>
-            <div class="form-row field-password2">
-                {{ form.new_password2.errors }}
-                <label for="id_new_password2">Confirm password:</label>
-                {{ form.new_password2 }}
-            </div>
-            <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-                type="submit" value="Change my password" />
-        </fieldset>
-    </form>
+<div class="container">
+    <div class="heading">Please enter your new password twice so we can verify you typed it in correctly.</div>
+    <div class="reset-pass-card-wide">
+        <form method="post">
+            {% csrf_token %}
+            <fieldset>
+                <div class="form-row field-password1">
+                    {{ form.new_password1.errors }}
+                    <label for="id_new_password1">New password:</label>
+                    {{ form.new_password1 }}
+                </div>
+                <div class="form-row field-password2">
+                    {{ form.new_password2.errors }}
+                    <label for="id_new_password2">Confirm password:</label>
+                    {{ form.new_password2 }}
+                </div>
+                <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+                    type="submit" value="Change my password" />
+            </fieldset>
+        </form>
+    </div>
 </div>
-
 {% else %}
-
-<h3 class="main-heading">
-    <span class="material-icons noauth-icons">
-        clear
-    </span>
-    <br /><br />
-    The password reset link was invalid, possibly because it has already been used.<br />
-    Please request a new password reset.
-</h3>
-
+<div class="container">
+    <div class="heading">
+        <div class="i-container">
+            <i class="material-icons">
+                clear
+            </i>
+        </div>
+        The password reset link was invalid, possibly because it has already been used. Please request a new password reset.
+    </div>
+</div>
 {% endif %}
+<script>
+    $('input').addClass('mdl-textfield__input');
+</script>
+<style>
+    .container {
+        width: 40vw;
+        margin-left: 30vw;
+        border-radius: 5px;
+        background-color: #EEEEEE;
+        padding: 2vh 2vw;
+        margin-top: 10vh;
+    }
+
+    .heading {
+        font-size: 1.5em;
+        line-height: 1.2;
+    }
+
+    .form-row {
+        margin-bottom: 2vh;
+    }
+
+    input.mdl-button {
+        background-color: #161A1D !important;
+        color: #EEEEEE !important;
+        font-family: 'Rubik', sans-serif !important;
+        padding-top: 1px !important;
+        text-align: center;
+        margin: auto;
+        margin-top: 2vh;
+    }
+
+    .i-container {
+        width: 100%;
+        text-align: center;
+    }
+
+    .i-container i {
+        font-size: 4em;
+    }
+</style>
 {% endblock %}
