--- a/accounts/templates/accounts/password_reset_done.html
+++ b/accounts/templates/accounts/password_reset_done.html
@@ -1,9 +1,31 @@
 {% extends 'noauth/base.html' %}
 {% block main %}
-We’ve emailed you instructions for setting your password,
-if an account exists with the email you entered. You should receive them shortly.
-<br /><br />
-If you don’t receive an email, please make sure you’ve entered the address you
-registered with, and check your spam folder. You may not receive an email if you've
-used Google Sign In previously with this email.
+<div class="container">
+    <div class="i-container"><i class="material-icons">thumb_up_alt</i></div>
+    <br />
+    We’ve emailed you instructions for setting your password,
+    if an account exists with the email you entered. You should receive them shortly.
+    <br /><br />
+    If you don’t receive an email, please make sure you’ve entered the address you
+    registered with, and check your spam folder. You may not receive an email if you've
+    used Google Sign In previously with this email.
+</div>
+<style>
+    .container {
+        background-color: #EEEEEE;
+        width: 50vw;
+        margin-left: 25vw;
+        margin-top: 10vh;
+        border-radius: 5px;
+        padding: 2vh 2vw;
+        font-size: 1.5em;
+    }
+    .i-container {
+        width: 100%;
+        text-align: center;
+    }
+    .i-container i {
+        font-size: 4em !important;
+    }
+</style>
 {% endblock %}
