--- a/accounts/templates/accounts/password_reset_form.html
+++ b/accounts/templates/accounts/password_reset_form.html
@@ -8,8 +8,38 @@
             <label for="id_email">Email address:</label>
             {{ form.email }}
         </div>
-        <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit"
-            value="Reset my password" />
+        <div class="mdl-grid">
+            <div class="mdl-cell mdl-cell--12-col">
+                <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+                    type="submit" value="Reset my password" />
+            </div>
+        </div>
     </fieldset>
 </form>
+<script>
+    $('.form-row input').addClass('mdl-textfield__input');
+</script>
+<style>
+    form {
+        width: 40vw;
+        margin-left: 30vw;
+        padding: 2vh 2vw;
+        background-color: #EEEEEE;
+        margin-top: 10vh;
+        border-radius: 5px;
+    }
+
+    input.mdl-button {
+        background-color: #161A1D !important;
+        color: #EEEEEE !important;
+        font-family: 'Rubik', sans-serif !important;
+        padding-top: 1px !important;
+        text-align: center;
+        margin: auto;
+    }
+
+    .mdl-grid {
+        text-align: center;
+    }
+</style>
 {% endblock %}
