--- a/influencer/templates/influencer/base.html
+++ b/influencer/templates/influencer/base.html
@@ -19,7 +19,7 @@
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <a href="{% url 'accounts:landing' %}">
-                    <span class="mdl-layout-title">Endorsity</span>
+                    <span class="mdl-layout-title">Endorsity | Influencer View</span>
                 </a>
                 <div class="mdl-layout-spacer"></div>
                 <nav class="mdl-navigation mdl-layout--large-screen-only">
