--- a/accounts/templates/accounts/brand_registration.html
+++ b/accounts/templates/accounts/brand_registration.html
@@ -1,10 +1,40 @@
 {% extends 'noauth/base.html' %}
 {% block main %}
-<form method="post" class="register-form">
-    {% csrf_token %}
-    {{ forms.brand_form.as_p }}
-    {{ forms.user_form.as_p }}
-    <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit"
-        value="Register" />
-</form>
+<div class="form-wrapper">
+    <form method="post" class="register-form">
+        {% csrf_token %}
+        {{ forms.brand_form.as_p }}
+        {{ forms.user_form.as_p }}
+        <div class="button-container">
+            <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+                type="submit" value="Register" />
+        </div>
+    </form>
+</div>
+<script>
+    $('p input').addClass('mdl-textfield__input');
+</script>
+<style>
+    .form-wrapper {
+        background-color: #EEEEEE;
+        width: 40vw;
+        margin-left: 30vw;
+        margin-top: 10vh;
+        border-radius: 5px;
+        padding: 2vh 2vw;
+    }
+
+    input.mdl-button {
+        background-color: #161A1D !important;
+        color: #EEEEEE !important;
+        font-family: 'Rubik', sans-serif !important;
+        padding-top: 1px !important;
+        text-align: center;
+    }
+
+    .button-container {
+        width: 100%;
+        text-align: center;
+    }
+</style>
 {% endblock %}
