--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,26 +1,120 @@
 {% extends 'noauth/base.html' %}
+{% load static %}
+{% load socialaccount %}
 {% block main %}
-    <form method="post">
-        {% csrf_token %}
-        <table class="login-form-table">
-            {{ form.as_table }}
-        </table>
-        <div class="mdl-grid login-card-grid">
-            <div class="mdl-cell mdl-cell--6-col">
-                <a href="{% url 'accounts:password_reset' %}">
-                    <button type="button" class="mdl-button mdl-js-button mdl-js-ripple-effect">
-                        Forgot Password?
-                    </button>
-                </a>
-            </div>
-            <div class="mdl-cell mdl-cell--6-col">
-                <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-                    type="submit" value="Login" />
-            </div>
-            {% load socialaccount %}
-            <a href="{% provider_login_url 'google' %}">Google Sign In</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="{% url 'accounts:brand_registration' %}">Sign Up As a Brand</a>&nbsp;&nbsp;&nbsp;
-            <a href="{% url 'accounts:influencer_registration' %}">Sign Up As an Influencer</a>
+<div class="tab-wrapper">
+    <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
+        <div class="mdl-tabs__tab-bar">
+            <a href="#login-panel" class="mdl-tabs__tab is-active">Login</a>
+            <a href="#signup-panel" class="mdl-tabs__tab">Sign Up</a>
         </div>
-    </form>
+        <div class="mdl-tabs__panel is-active" id="login-panel">
+            <div class="gsignin-wrapper">
+                <a href="{% provider_login_url 'google' %}"><img src="{% static 'gsignin.png' %}"
+                        alt="Google Sign In" /></a>
+                <br /><br />OR<br /><br />
+            </div>
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div class="mdl-grid login-card-grid">
+                    <div class="mdl-cell mdl-cell--6-col">
+                        <input
+                            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+                            type="submit" value="Login" />
+                    </div>
+                    <div class="mdl-cell mdl-cell--6-col">
+                        <a href="{% url 'accounts:password_reset' %}">
+                            <button type="button" class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                                Forgot Password?
+                            </button>
+                        </a>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="mdl-tabs__panel" id="signup-panel">
+            <a href="{% url 'accounts:brand_registration' %}">
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                    <i class="material-icons">local_offer</i>
+                    &nbsp;&nbsp;Sign Up As a Brand
+                </button>
+            </a>
+            <br /><br />
+            <a href="{% url 'accounts:influencer_registration' %}">
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                    <i class="material-icons">how_to_reg</i>
+                    &nbsp;&nbsp;Sign Up As an Influencer
+                </button>
+            </a>
+        </div>
+    </div>
+</div>
+<script>
+    $('input').addClass('mdl-textfield__input');
+</script>
+<style>
+    .tab-wrapper {
+        width: 40vw;
+        margin-left: 30vw;
+        background-color: #EEEEEE;
+        margin-top: 10vh;
+        padding-top: 0;
+        border-radius: 5px;
+    }
+
+    form button {
+        color: #161A1D !important;
+        width: 100%;
+    }
+
+    input.mdl-button {
+        background-color: #161A1D !important;
+        color: #EEEEEE !important;
+        font-family: 'Rubik', sans-serif !important;
+        padding-top: 1px !important;
+        text-align: center;
+    }
+
+    #signup-panel {
+        padding: 4vh 0;
+        text-align: center;
+    }
+
+    .mdl-tabs__tab {
+        color: #424242 !important;
+    }
+
+    .mdl-tabs__tab.is-active {
+        color: #000000 !important;
+    }
+
+    .mdl-tabs.is-upgraded .mdl-tabs__tab.is-active:after {
+        background: #424242;
+    }
+
+    #signup-panel button {
+        background-color: #161A1D !important;
+        color: #EEEEEE !important;
+    }
+
+    .login-card-grid {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .login-card-grid>.mdl-cell {
+        margin-left: 0;
+    }
+
+    .gsignin-wrapper {
+        width: 100%;
+        text-align: center;
+    }
+
+    #login-panel {
+        padding: 5vh 5vw;
+        padding-top: 2vh;
+    }
+</style>
 {% endblock %}
