--- a/accounts/templates/noauth/landing.html
+++ b/accounts/templates/noauth/landing.html
@@ -1,4 +1,13 @@
 {% extends 'noauth/base.html' %}
 {% block main %}
-<h1>Landing Page</h1>
+<h1>India's Most Rewarding Influencer Marketing Club</h1>
+<style>
+    h1 {
+        text-align: center;
+        margin-top: 10vh;
+        color: #E0E0E0;
+        font-family: 'Rubik', sans-serif;
+        font-weight: 300;
+    }
+</style>
 {% endblock %}
