--- a/accounts/templates/accounts/password_reset_form.html
+++ b/accounts/templates/accounts/password_reset_form.html
@@ -1,6 +1,7 @@
 {% extends 'noauth/base.html' %}
 {% block main %}
 <form method="post" class="reset-pass-form">
+    <div class="heading">Reset Your Password</div>
     {% csrf_token %}
     <fieldset class="module aligned">
         <div class="form-row field-email">
@@ -39,6 +40,12 @@
     }
 
     .mdl-grid {
+        text-align: center;
+    }
+
+    .heading {
+        font-size: 2em;
+        margin-bottom: 3vh;
         text-align: center;
     }
 </style>
