--- a/influencer/templates/influencer/facebook_failed.html
+++ b/influencer/templates/influencer/facebook_failed.html
@@ -1,4 +1,50 @@
-{% extends 'influencer/base.html' %}
+{% extends 'influencer/inactive_base.html' %}
 {% block main %}
-<h1>Failed Connection.</h1>
+<div class="container">
+    <div class="i-container"><i class="material-icons">error_outline</i></div><br />
+    <div class="heading">
+        Connecting to facebook failed.<br />
+        Please try again. Make sure that you provide all the required permissions while connecting. If problem persists, do contact us and our support team will help you out.<br /><br />
+    </div>
+    <div class="mdl-grid">
+        <div class="mdl-cell mdl-cell--6-col">
+            <a href="{% url 'accounts:contact_us' %}">
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                    Contact Us
+                </button>
+            </a>
+        </div>
+        <div class="mdl-cell mdl-cell--6-col">
+            <a href="{% url 'accounts:landing' %}">
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                    Go Back
+                </button>
+            </a>
+        </div>
+    </div>
+</div>
+<style>
+    .container {
+        background-color: #EEEEEE;
+        color: #161A1D;
+        padding: 2vh 2vh;
+        width: 40vw;
+        margin-left: 30vw;
+        border-radius: 5px;
+        font-size: 1.5em;
+        margin-top: 10vh;
+    }
+
+    .i-container>i {
+        font-size: 4em;
+        width: 100%;
+        text-align: center;
+    }
+
+    .container .mdl-button {
+        background-color: #161A1D !important;
+        color: #EEEEEE !important;
+        width: 100%;
+    }
+</style>
 {% endblock %}
