--- a/accounts/templates/accounts/influencer_registration.html
+++ b/accounts/templates/accounts/influencer_registration.html
@@ -43,5 +43,11 @@
         margin-bottom: 3vh;
         text-align: center;
     }
+
+    .errorlist {
+        background-color: #DD2C00;
+        border-radius: 5px;
+        color: #EEEEEE;
+    }
 </style>
 {% endblock %}
