--- a/accounts/templates/noauth/base.html
+++ b/accounts/templates/noauth/base.html
@@ -6,7 +6,8 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 
@@ -84,7 +85,7 @@
                 </a>
                 <a href="#" class="mdl-navigation__link">
                     <button class="mdl-button mdl-js-button">
-                        How Are We Different
+                        Pricing
                     </button>
                 </a>
                 <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
