--- a/influencer/templates/influencer/base.html
+++ b/influencer/templates/influencer/base.html
@@ -1,59 +1,208 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
-
-{% load static %}
 
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.js" integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM=" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Eczar&family=Rubik:wght@300;400&display=swap');
 
+        * {
+            font-family: 'Rubik', sans-serif;
+            font-weight: 400;
+        }
+
+        button {
+            color: #EEEEEE !important;
+            font-family: 'Rubik', sans-serif !important;
+            padding-top: 1px !important;
+        }
+
+        button.mdl-button--colored {
+            color: #161A1D !important;
+            background-color: #EEEEEE !important;
+        }
+
+        body {
+            background-color: #161A1D;
+        }
+
+        .mdl-layout__header {
+            background-color: transparent;
+            box-shadow: none;
+            margin-top: 3vh;
+        }
+
+        .logo-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            padding-top: 5px;
+        }
+
+        .logo-img {
+            height: 4vw;
+        }
+
+        .logo-text {
+            font-size: 2em;
+            padding-left: 10px;
+            font-family: 'Roboto Slab', serif;
+            color: #E0E0E0;
+        }
+
+        .mdl-layout__drawer-button {
+            margin-top: 4.5vh;
+        }
+
+        .mdl-layout__drawer-button>i {
+            font-size: 1.2em;
+            color: #EEEEEE;
+        }
+
+        .mdl-menu a {
+            text-decoration: none;
+            color: #161A1D;
+        }
+
+        .mdl-menu i {
+            vertical-align: middle;
+            font-size: 1.3em;
+        }
+
+        .top-menu {
+            width: 40vw;
+            text-align: center;
+            margin-top: 3vh;
+            border: 2px solid #EEEEEE;
+            border-radius: 5px;
+            padding: 0;
+            background-color: #EEEEEE;
+            color: #161A1D;
+        }
+
+        .top-menu i {
+            vertical-align: middle;
+        }
+
+        .top-menu a {
+            text-decoration: none;
+            color: inherit;
+            width: 100%;
+        }
+
+        .top-menu .mdl-cell {
+            padding: 8px;
+            border-radius: 5px;
+        }
+
+        .top-menu .is-active {
+            background-color: #161A1D;
+            color: #EEEEEE;
+        }
+
+        .view-all-notifs {
+            background-color: #161A1D !important;
+            color: #EEEEEE !important;
+            margin: 10px 10px;
+            border-radius: 10px;
+        }
+
+        #notifications {
+            margin-left: 2vw;
+            margin-right: 1vw;
+        }
     </style>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
-                <a href="{% url 'accounts:landing' %}">
-                    <span class="mdl-layout-title">Endorsity | Influencer View</span>
+                <a href="{% url 'accounts:landing' %}" class="logo-container">
+                    <img src="{% static 'logo.png' %}" alt="Endorsity" class="logo-img" />
+                    <div class="logo-text">ENDORSITY</div>
                 </a>
                 <div class="mdl-layout-spacer"></div>
-                <nav class="mdl-navigation mdl-layout--large-screen-only">
-                    <div id="notifications"
-                        class="material-icons {% if notifs_unread > 0 %}mdl-badge{% endif %} mdl-badge--overlap"
-                        data-badge="{{ notifs_unread }}">notifications</div>
-                    <a class="mdl-navigation__link" href="{% url 'accounts:logout' %}">Logout</a>
-                </nav>
+                <a href="{% url 'accounts:how_it_works' %}" class="mdl-navigation__link">
+                    <button class="mdl-button mdl-js-button">
+                        How It Works
+                    </button>
+                </a>
+                <a href="#" class="mdl-navigation__link">
+                    <button class="mdl-button mdl-js-button">
+                        Pricing
+                    </button>
+                </a>
+                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">
+                    <button class="mdl-button mdl-js-button">
+                        <i class="material-icons">question_answer</i>
+                        &nbsp;&nbsp;Contact Us
+                    </button>
+                </a>
+                <a class="mdl-navigation__link" href="{% url 'accounts:faq' %}">
+                    <button class="mdl-button mdl-js-button">
+                        <i class="material-icons">help</i>
+                        &nbsp;&nbsp;FAQ
+                    </button>
+                </a>
+                <div id="notifications"
+                    class="material-icons {% if notifs_unread > 0 %}mdl-badge{% endif %} mdl-badge--overlap"
+                    data-badge="{{ notifs_unread }}">
+                    notifications
+                </div>
+                <a class="mdl-navigation__link" href="{% url 'accounts:logout' %}">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+                        <i class="material-icons">exit_to_app</i>
+                        &nbsp;&nbsp;Logout
+                    </button>
+                </a>
             </div>
         </header>
-        <div class="mdl-layout__drawer">
-            <span class="mdl-layout-title">Endorsity</span>
-            <nav class="mdl-navigation">
-                <a class="mdl-navigation__link" href="{% url 'accounts:how_it_works' %}">How It Works</a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:contact_us' %}">Contact Us</a>
-                <a class="mdl-navigation__link" href="{% url 'accounts:faq' %}">FAQ</a>
-            </nav>
+        <ul id="notif-log" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="notifications">
+            {% for notification in notifications %}
+            <a href="{{ notification.link }}">
+                <li class="mdl-menu__item">{{ notification.message }}</li>
+            </a>
+            {% endfor %}
+            <a class="all-notifs-link" href="/notifications/">
+                <li class="mdl-menu__item view-all-notifs">View All Notifications</li>
+            </a>
+        </ul>
+        <div class="top-menu mdl-grid">
+            <div class="mdl-cell mdl-cell--4-col is-active">
+                <a href="{% url 'influencer:brands' %}">
+                    <i class="material-icons">local_offer</i>
+                    &nbsp;BRANDS
+                </a>
+            </div>
+            <div class="mdl-cell mdl-cell--4-col">
+                <a href="#">
+                    <i class="material-icons">favorite</i>
+                    &nbsp;POST
+                </a>
+            </div>
+            <div class="mdl-cell mdl-cell--4-col">
+                <a href="#">
+                    <i class="material-icons">account_circle</i>
+                    &nbsp;PROFILE
+                </a>
+            </div>
         </div>
         <main class="mdl-layout__content">
             <div class="page-content">
                 {% block main %}{% endblock %}
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             </div>
         </main>
     </div>
-    <ul id="notif-log" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="notifications">
-        {% for notification in notifications %}
-        <a href="{{ notification.link }}">
-            <li class="mdl-menu__item">{{ notification.message }}</li>
-        </a>
-        {% endfor %}
-        <a href="/notifications/">
-            <li class="mdl-menu__item view-all-notifs">View All Notifications</li>
-        </a>
-    </ul>
     <script src="{% static 'js/notifications.js' %}"></script>
 </body>
 
