--- a/accounts/templates/accounts/password_reset/password_reset_form.html
+++ b/accounts/templates/accounts/password_reset/password_reset_form.html
@@ -9,6 +9,8 @@
             <label for="id_email">Email address:</label>
             {{ form.email }}
         </div>
+        <div class="h-captcha" data-sitekey="563ac64e-bb9b-47a7-8729-162c2ecf7dda"></div>
+        <script src="https://hcaptcha.com/1/api.js" async defer></script>
         <div class="mdl-grid">
             <div class="mdl-cell mdl-cell--12-col">
                 <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
@@ -47,6 +49,10 @@
         font-size: 2em;
         margin-bottom: 3vh;
         text-align: center;
+    }
+
+    .field-email {
+        margin-bottom: 2vh;
     }
 </style>
 {% endblock %}
