--- a/accounts/templates/accounts/complete_registration/complete_brand_reg.html
+++ b/accounts/templates/accounts/complete_registration/complete_brand_reg.html
@@ -9,9 +9,25 @@
             value="Complete Registration" />
     </form>
 </div>
+<div class="mdl-tooltip mdl-tooltip--large mdl-tooltip--right" for="store-location-label">
+    If you have multiple stores, you can add other store locations from the dashboard after registration.
+</div>
 <script>
     $('p input').addClass('mdl-textfield__input');
+    $('label[for="id_phone_number"]').html('Phone number (10-digit):');
+    $('label[for="id_website"]').html('Website (Optional):');
+    $('label[for="id_instagram_handle"]').html('Instagram handle (Optional):');
+    $('label[for="id_store_location"]').attr('id', 'store-location-label');
+    $('label[for="id_store_location"]').append('&nbsp;<i class="material-icons">info</i>');
+    var initializeMaps = () => {
+        var maps_input = document.getElementById('id_store_location');
+        new google.maps.places.Autocomplete(maps_input);
+        $('#id_store_location').attr('placeholder', '');
+    };
 </script>
+<script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBpgqiVV0SVKh5pRtddZkxtrMD4Gtty3xk&libraries=places&callback=initializeMaps"
+    async defer></script>
 <style>
     .container {
         width: 40vw;
@@ -34,6 +50,22 @@
         background-color: #161A1D !important;
         margin-top: 2vh;
         width: 100%;
+    }
+
+    .errorlist {
+        background-color: #DD2C00;
+        border-radius: 5px;
+        color: #EEEEEE;
+    }
+
+    .mdl-tooltip {
+        font-size: 0.8em;
+    }
+
+    p>label>i.material-icons {
+        font-size: 1.2em;
+        vertical-align: middle;
+        padding-bottom: 3px;
     }
 </style>
 {% endblock %}
